# edgeradar

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FINDINGS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: .gitkeep
dbt/: .gitkeep  .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: stage_quotes.sql
dbt/models/marts/: _eval.yml  _marts.yml  dim_event.sql  fact_market_quotes.sql  fact_quotes_with_event.sql  mart_calibration.sql  mart_divergence.sql  mart_signal_scores.sql  mart_weather_edge.sql  stg_signal_log.sql
dbt/models/staging/: _staging.yml  stg_event_map.sql  stg_kalshi.sql  stg_manifold.sql  stg_oddsapi.sql  stg_polymarket.sql
dbt/tests/: assert_match_confidence_in_range.sql  assert_probabilities_in_unit_interval.sql
sample_responses/: .gitkeep
sample_responses/kalshi/: markets.json  settled.json
sample_responses/manifold/: markets.json
sample_responses/oddsapi/: odds.json
sample_responses/polymarket/: markets.json
sample_responses/weather/: chicago_forecast.json  nyc_forecast.json
scripts/: daily_notify.sh
seeds/: README.md  event_overrides.csv  resolutions.csv
src/edgeradar/: __init__.py  alerter.py  analytics.py  cli.py  config.py  entity_resolution.py  evaluation.py  fees.py  ingest.py  models.py  normalize.py  quality.py  resolution_diagnostics.py  storage.py  targeting.py  weather.py
src/edgeradar/adapters/: __init__.py  _util.py  base.py  kalshi.py  manifold.py  oddsapi.py  polymarket.py
src/edgeradar/dashboard/: __init__.py  app.py
src/edgeradar/orchestration/: __init__.py  definitions.py
src/edgeradar/streaming/: __init__.py  consumer.py  normalize_stream.py  producer.py  serde.py
tests/: test_adapters.py  test_alerter.py  test_analytics.py  test_entity_resolution.py  test_evaluation.py  test_oddsapi.py  test_polymarket.py  test_quality.py  test_resolution_diagnostics.py  test_signals.py  test_smoke.py  test_streaming.py  test_targeting.py
